--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,13 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+.gallery {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+img.test {
+  width: 200px;
+  height: auto;
+}
